# api-musicas

./: README.md  app.py  pyproject.toml
app/config/: db_config.py
app/models/: artista.py  gravadora.py  musica.py
app/repositories/: artista_repository.py  gravadora_repository.py  musica_repository.py
app/service/: artista_service.py  gravadora_service.py  musica_service.py
tests/: test_musica_service.py
