[tool.poetry]
name = "api-musicas"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Lourenço", email = "matheus.lourenco@ipeweb.com.br"}
]
requires-python = ">=3.12"
dependencies = []
packages = []
package-mode = false  # Desativa o modo pacote

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"