[tool.poetry]
name = "api-musicas"
version = "0.1.0"
description = ""
authors = ["Matheus Lourenço <matheus.lourenco@ipeweb.com.br>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
flask = "^3.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
